--- a/button.html
+++ b/button.html
@@ -1,25 +1,19 @@
-<!--Add two integer numbers using JavaScript.-->
-
 <html>
    <head>
       <title>Add and subtract two integer numbers using JavaScript.</title>
       <script type="text/javascript">
          function add(num1,num2){
-         	let sum=0;
-         	sum=Num1+Num2;
+         	 let sum=num1+num2;
          	alert("SUM is: " + sum);
          }
          function sub(num1,num2){
-         	let minus=0;
-         	minus=Num1-Num2;
+         	let minus=num1-num2;
          	alert("subtract value is: " + minus);
          }
-         sum(5,6);
-         sub(8,6);
       </script>
    </head>
    <body>
-      <button type="button" onclick = "add()"> sum </button><br>
-       <button type="button" onclick = "sub()"> sub </button><br>
+      <button type="button" onclick = "add(5,5)"> sum </button><br>
+       <button type="button" onclick = "sub(5,6)"> sub </button><br>
    </body>
 </html>
